2002-07-24  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>

	* tm_project.c: Added *.i and *.pc to C code files.
	* data/Makefile.am, plugins/class-gen/Makefile.am: Build fixes.
	* src/project_dbase.c: Project dir realpath()ed.

2002-07-17  Stephane Demurget  <demurgets@free.fr>

	* */*/*.{c, cxx, h, py}:
	* scintilla/include/Scintilla.iface: UNIXified all sources thanks to a
	nifty script from Timothee Besset <ttimo@idsoftware.com>.

2002-07-15	Naba Kumar	<kh_naba@users.sourceforge.net>
	
	* NEWS: Updated.
	* scintilla/KeyWords.cxx: Fixed a complie bug.

2002-07-02	Naba Kumar	<kh_naba@users.sourceforge.net>

	* src/aneditor.cxx: Expression tip not shown when
	debugger not active or ready.
	
	* data/Makefile.am: Install anjuta.mime in $(prefix)/share/mime-info
	
2002-07-01	Naba Kumar	<kh_naba@users.sourceforge.net>

	* pixmaps/anjuta_splash.png: New splash from Misha.
	
	Patch from: Pierre Sarrazin <sarrazip@sympatico.ca>
	
	* src/breakpoints.h, src/debugger.h, src/project_dbase.h,
	src/text_editor.c, src/text_editor.h, src/text_editor_gui.c,
	src/toolbar.c, src/toolbar.h: C++ fixes so that these could work
	with c++ sources.
	
	* src/aneditor.cxx: Automatic expression tips during debugging
	session.
	
	* NEWS: Updated.
	
2002-06-28  patch from Jens Georg <mail@jensgeorg.de>

	* doc/Makefile.am, configure.in: Updated for new launcher manpage.
	* doc/anjuta_launcher.1.in: Added file.
	
2002-06-28	Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* src/project_dbase.c: Fixed update of tagmanager.
	
2002-06-28	Johannes Schmid <clubfan@users.sourceforge.net>
	
	* src/cvs.c, src/cvs_gui.c: cvs remove -f is now used and
	a warning is printed in the dialog. (Bug #567983)

2002-06-28	Naba Kumar	<kh_naba@users.sourceforge.net>

	(Patch from: ??)
	
	* src/appwiz_page1.c, src/pixmaps.h, src/project_dbase.c,
	src/project_dbase.h, src/project_import_cbs.c, src/project_type.c,
	src/source.c, src/wizard_gui.c: libglade2 wizard.
	