@@ -1,11 +1,95 @@
-dnl Process this file with autoconf to produce a configure script.
-dnl Created by Anjuta - will be overwritten
-dnl If you don't want it to overwrite it,
-dnl 	Please disable it in the Anjuta project configuration
+AC_INIT(src/Makefile.am)
 
-AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(anjuta, 0.1.9.99)
+ANJUTA_VERSION=1.2.0
+
+GLIB_REQUIRED=1.3.10
+GTK_REQUIRED=1.3.10
+GNOME_REQUIRED=1.105
+GNOME_UI_REQUIRED=1.105
+GNOME_PRINT_REQUIRED=0.35
+GNOME_VFS_REQUIRED=1.9.4
+LIBZVT_REQUIRED=2.0.0
+GDK_PIXBUF_REQUIRED=2.0.0
+
+AC_SUBST(GLIB_REQUIRED)
+AC_SUBST(GTK_REQUIRED)
+AC_SUBST(GNOME_REQUIRED)
+AC_SUBST(GNOME_UI_REQUIRED)
+AC_SUBST(GNOME_PRINT_REQUIRED)
+AC_SUBST(GNOME_VFS_REQUIRED)
+AC_SUBST(LIBZVT_REQUIRED)
+AC_SUBST(GDK_PIXBUF_REQUIRED)
+
+AM_INIT_AUTOMAKE(anjuta, $ANJUTA_VERSION)
 AM_CONFIG_HEADER(config.h)
+
+AM_SANITY_CHECK
+AM_MAINTAINER_MODE
+
+AC_PROG_CC
+AC_PROG_CPP
+AC_PROG_CXX
+AC_ISC_POSIX
+AC_HEADER_STDC
+AM_PROG_LIBTOOL
+
+GNOME_COMMON_INIT
+
+PKG_CHECK_MODULES(ANJUTA, \
+	glib-2.0 >= $GLIB_REQUIRED \
+	gtk+-2.0 >= $GTK_REQUIRED \
+	libgnome-2.0 >= $GNOME_REQUIRED \
+	libgnomeui-2.0 >= $GNOME_UI_REQUIRED \
+	gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
+
+AC_SUBST(ANJUTA_CFLAGS)
+AC_SUBST(ANJUTA_LIBS)
+
+dnl Check for glib.
+PKG_CHECK_MODULES(GLIB, glib-2.0)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
+dnl Check for glib.
+PKG_CHECK_MODULES(GTK, gtk+-2.0)
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+
+ALL_LINGUAS="az da de el en_GB es fr it ja nl no pl pt pt_BR ru sk sv ta tr uk zh_CN zh_TW"
+GETTEXT_PACKAGE=anjuta
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
+AM_GLIB_GNU_GETTEXT
+AC_PROG_INTLTOOL
+
+AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
+
+dnl ***************************************************************************
+dnl Check for ScrollKeeper [Is it available with pkgconfig?]
+dnl ***************************************************************************
+AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
+if test x$SCROLLKEEPER_CONFIG = xno; then
+  AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper package. You can get it from http://scrollkeeper.sourceforge.net/)
+fi
+SCROLLKEEPER_REQUIRED=0.1.4
+AC_SUBST(SCROLLKEEPER_REQUIRED)
+
+dnl ***************************************************************************
+dnl Test whether jw is installed [What about this???]
+dnl ***************************************************************************
+AC_PATH_PROG(JW,jw,no)
+if test x$JW = xno; then
+  HAVE_JW="no"
+else
+  HAVE_JW="yes"
+fi
+AM_CONDITIONAL(HAVE_JW, test "x$HAVE_JW" = "xyes")
+AC_SUBST(HAVE_JW)
+
+
+dnl ***************************************************************************
+dnl Tagmanager checks.
+dnl ***************************************************************************
 
 dnl Define convenience macros
 dnl -------------------------
@@ -25,117 +109,6 @@ AC_DEFUN(CHECK_HEADER_DEFINE,
 	AC_MSG_RESULT(no)
 	$4
 ]) ])
-
-dnl Enable debugging mode
-AC_ARG_ENABLE(debug,
-      [  --enable-debug           Enable debug messages],
-      CFLAGS="$CFLAGS -DDEBUG")
-dnl Initialize xml-i18n-tools
-AM_PROG_XML_I18N_TOOLS
-
-AC_ISC_POSIX
-AC_PROG_CC
-AC_PROG_CXX
-AM_PROG_CC_STDC
-AC_HEADER_STDC
-
-dnl check for libtool
-AM_PROG_LIBTOOL
-
-dnl Pick up the GNOME macros.
-AM_ACLOCAL_INCLUDE(macros)
-
-dnl GNOME macros.
-GNOME_INIT
-GNOME_COMPILE_WARNINGS
-GNOME_X_CHECKS
-
-dnl Glib flags
-GLIB_CFLAGS=`gnome-config --cflags glib`
-GLIB_LIBS=`gnome-config --libs glib`
-AC_SUBST(GLIB_LIBS)
-AC_SUBST(GLIB_CFLAGS)
-
-dnl we need to check the lib first
-AC_PATH_PROG(EXTRA_ORBIT_CONFIG, orbit-config,no)
-if test x$EXTRA_ORBIT_CONFIG = xno; then
-  AC_MSG_ERROR(Couldn't find orbit-config, please install the ORBit package.)
-fi
-
-AC_PATH_PROG(EXTRA_VFS_CONFIG, gnome-vfs-config,no)
-if test x$EXTRA_VFS_CONFIG = xno; then
-  AC_MSG_ERROR(Couldn't find gnome-vfs-config, please install the Gnome VFS package.)
-fi
-
-AC_PATH_PROG(EXTRA_PIXBUF_CONFIG, gdk-pixbuf-config,no)
-if test x$EXTRA_PIXBUF_CONFIG = xno; then
-  AC_MSG_ERROR(Couldn't find gdk-pixbuf-config, please install the Gdk Pixbuf package.)
-fi
-
-dnl Checks for programs.
-dnl ***************************************************************************
-dnl Check for Gnome XML
-dnl ***************************************************************************
-GNOME_XML_CHECK
-
-dnl ***************************************************************************
-dnl Check for ScrollKeeper
-dnl ***************************************************************************
-AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
-if test x$SCROLLKEEPER_CONFIG = xno; then
-  AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper package. You can get it from http://scrollkeeper.sourceforge.net/)
-fi
-SCROLLKEEPER_REQUIRED=0.1.4
-AC_SUBST(SCROLLKEEPER_REQUIRED)
-
-dnl Check for pkg-config
-AC_PATH_PROG(PKGCONFIG_CONFIG, pkg-config,no)
-if test x$PKGCONFIG_CONFIG = xno; then
-  AC_MSG_ERROR(Please install the pkg-config package from http://www.freedesktop.org/software/pkgconfig/)
-fi
-
-dnl ***************************************************************************
-dnl Test whether jw is installed
-dnl ***************************************************************************
-AC_PATH_PROG(JW,jw,no)
-if test x$JW = xno; then
-  HAVE_JW="no"
-else
-  HAVE_JW="yes"
-fi
-AM_CONDITIONAL(HAVE_JW, test "x$HAVE_JW" = "xyes")
-AC_SUBST(HAVE_JW)
-
-dnl ******************************
-dnl GnomePrint checking
-dnl ******************************
-AC_MSG_CHECKING(for GnomePrint libraries >= 0.35)
-if gnome-config --libs print > /dev/null 2>&1; then 
-    vers=`gnome-config --modversion print | sed -e "s/gnome-print-//" | \
-        awk 'BEGIN { FS = "."; } { print $1 * 1000 + $2;}'`
-    if test "$vers" -ge 35; then
-        AC_MSG_RESULT(found)
-    else
-        AC_MSG_ERROR(You need at least GNOME print 0.35 for this version of Anjuta)
-    fi
-else
-    AC_MSG_ERROR(Did not find GnomePrint installed)
-fi
-
-dnl Checks for libraries.
-EXTRA_GNOME_LIBS=`gnome-config --libs gnorba zvt vfs bonobo print gdk_pixbuf`
-EXTRA_GNOME_CFLAGS=`gnome-config --cflags gnorba zvt vfs bonobo print gdk_pixbuf`
-
-AC_SUBST(EXTRA_GNOME_LIBS)
-AC_SUBST(EXTRA_GNOME_CFLAGS)
-
-EXTRA_ORBIT_LIBS=`orbit-config --libs client`
-EXTRA_ORBIT_CFLAGS=`orbit-config --cflags client`
-
-AC_SUBST(EXTRA_ORBIT_LIBS)
-AC_SUBST(EXTRA_ORBIT_CFLAGS)
-
-IDL_CFLAGS=`gnome-config --cflags idl`
 
 dnl Checks for header files.
 AC_CHECK_HEADERS(dirent.h fcntl.h fnmatch.h stat.h stdlib.h string.h)
@@ -297,15 +270,6 @@ if test "$have_ftruncate" = yes ; then
     CHECK_PROTO(ftruncate, unistd.h)
 fi
 
-
-dnl Checks for Additional stuffs.
-
-
-
-dnl Languages which your application supports
-ALL_LINGUAS="az da de el en_GB es fr it ja nl no pl pt pt_BR ru sk sv ta tr uk zh_CN zh_TW"
-AM_GNOME_GETTEXT
-
 dnl Set PACKAGE_LOCALE_DIR in config.h.
 if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
@@ -383,9 +347,7 @@ AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")
 
 AC_OUTPUT([
 Makefile
-intl/Makefile
 po/Makefile.in
-macros/Makefile
 tagmanager/Makefile
 tagmanager/include/Makefile
 global-tags/Makefile
