@@ -1,2 +1,10 @@
-noinst_HEADERS = tm_project.h  tm_source_file.h	tm_tag.h  tm_work_object.h  tm_workspace.h tm_symbol.h tm_tagmanager.h tm_file_entry.h
+noinst_HEADERS = \
+	tm_project.h\
+	tm_source_file.h\
+	tm_tag.h\
+	tm_work_object.h\
+	tm_workspace.h\
+	tm_symbol.h\
+	tm_tagmanager.h\
+	tm_file_entry.h
 
